--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,6 +84,7 @@ export(transform_score_sirius_csi)
 export(weight_annotations)
 export(weight_bio)
 export(weight_chemo)
+import(rlang)
 importFrom(MetaboCoreUtils,calculateMass)
 importFrom(MsBackendMgf,readMgfSplit)
 importFrom(MsBackendMsp,readMsp)
@@ -110,6 +111,7 @@ importFrom(crayon,white)
 importFrom(crayon,yellow)
 importFrom(docopt,docopt)
 importFrom(dplyr,join_by)
+importFrom(glue,glue)
 importFrom(httr2,req_error)
 importFrom(httr2,req_method)
 importFrom(httr2,req_perform)
@@ -120,6 +122,7 @@ importFrom(igraph,components)
 importFrom(igraph,graph_from_data_frame)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,stream_in)
+importFrom(lifecycle,deprecated)
 importFrom(msentropy,calculate_entropy_similarity)
 importFrom(msentropy,calculate_spectral_entropy)
 importFrom(pak,pkg_status)
