--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -1,17 +1,15 @@
----
 # Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches:
-      - "main"
+    branches: [main, master]
   pull_request:
-    branches:
-      - "main"
+    branches: [main, master]
   release:
-    types:
-      - "published"
+    types: [published]
   workflow_dispatch:
+
+name: pkgdown
 
 permissions:
   actions: write
@@ -28,16 +26,16 @@ permissions:
   security-events: read
   statuses: read
 
-name: pkgdown
-
 jobs:
   pkgdown:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     # Only restrict concurrency for non-PR jobs
     concurrency:
       group: pkgdown-${{ github.event_name != 'pull_request' || github.run_id }}
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
 
@@ -46,13 +44,11 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
-          Ncpus: 2
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages: any::pkgdown, local::.
           needs: website
-          pak-version: devel # See https://github.com/r-lib/actions/issues/559
 
       - name: Build site
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
