--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,7 +43,7 @@ export(harmonize_adducts)
 export(harmonize_names_sirius)
 export(harmonize_spectra)
 export(import_spectra)
-export(install_latest_version)
+export(install)
 export(keep_peaks)
 export(load_yaml_files)
 export(log_debug)
