Update a few things

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -163,6 +163,7 @@ Collate:
     'prepare_params.R'
     'prepare_taxa.R'
     'replace_id.R'
+    'run_app.R'
     'tima-package.R'
     'transform_score_sirius_csi.R'
     'weight_chemo.R'
