--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(read_from_sirius_zip)
 export(remove_above_precursor)
 export(replace_id)
 export(round_reals)
+export(run_app)
 export(sanitize_spectra)
 export(select_annotations_columns)
 export(select_sirius_columns_canopus)
@@ -130,6 +131,7 @@ importFrom(pbapply,pblapply)
 importFrom(rotl,tax_lineage)
 importFrom(rotl,taxonomy_taxon_info)
 importFrom(rotl,tnrs_match_names)
+importFrom(shiny,runApp)
 importFrom(stats,as.dist)
 importFrom(stats,dist)
 importFrom(stats,setNames)
