--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,9 +12,8 @@ Description: TIMA provides the infrastructure to perform Taxonomically
     Informed Metabolite Annotation.
 License: GPL (>= 3)
 URL: https://github.com/taxonomicallyinformedannotation/tima,
-    https://taxonomicallyinformedannotation.github.io/tima/
-BugReports: 
-    https://github.com/taxonomicallyinformedannotation/tima/issues
+    https://taxonomicallyinformedannotation.github.io/tima
+BugReports: https://github.com/taxonomicallyinformedannotation/tima/issues
 Depends:
     R (>= 4.4.0)
 Imports:
