--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     user: tima-user
     volumes:
       - "./data:/home/tima-user/data"
-    command: Rscript -e "targets::tar_make(names = matches("^ann_pre$"), script=system.file("/pipelines/_targets.R","tima"))"
+    command: Rscript -e "targets::tar_make(names = matches("^ann_pre$"), script=system.file("pipelines/_targets.R", package = "tima"))"
 
   tima-gui:
     build: "."
