Allow for oldrel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,7 +87,7 @@ export(weight_bio)
 export(weight_chemo)
 import(rlang)
 importFrom(MetaboCoreUtils,calculateMass)
-importFrom(MsBackendMgf,readMgfSplit)
+importFrom(MsBackendMgf,readMgf)
 importFrom(MsBackendMsp,readMsp)
 importFrom(Spectra,Spectra)
 importFrom(Spectra,addProcessing)
@@ -114,6 +114,7 @@ importFrom(glue,glue)
 importFrom(httr2,req_error)
 importFrom(httr2,req_method)
 importFrom(httr2,req_perform)
+importFrom(httr2,req_progress)
 importFrom(httr2,request)
 importFrom(httr2,resp_status_desc)
 importFrom(igraph,V)
@@ -192,7 +193,6 @@ importFrom(tidytable,unnest)
 importFrom(tidytable,where)
 importFrom(utils,URLencode)
 importFrom(utils,combn)
-importFrom(utils,download.file)
 importFrom(utils,unzip)
 importFrom(yaml,read_yaml)
 importFrom(yaml,write_yaml)
