--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ export(select_sirius_columns_formulas)
 export(select_sirius_columns_structures)
 export(select_sop_columns)
 export(split_tables_sop)
+export(tima_full)
 export(transform_score_sirius_csi)
 export(weight_annotations)
 export(weight_bio)
@@ -143,6 +144,8 @@ importFrom(stringi,stri_replace_all_fixed)
 importFrom(stringi,stri_replace_all_regex)
 importFrom(stringi,stri_split_regex)
 importFrom(stringi,stri_sub)
+importFrom(targets,matches)
+importFrom(targets,tar_make)
 importFrom(tidyfst,col_rn)
 importFrom(tidyfst,rn_col)
 importFrom(tidyfst,set)
