--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(fake_lotus)
 export(fake_sop_columns)
 export(filter_annotations)
 export(filter_high_confidence_only)
+export(get_example_files)
 export(get_example_sirius)
 export(get_file)
 export(get_gnps_tables)
@@ -39,6 +40,7 @@ export(get_last_version_from_zenodo)
 export(get_massbank_spectra)
 export(get_organism_taxonomy_ott)
 export(get_params)
+export(go_to_cache)
 export(harmonize_adducts)
 export(harmonize_names_sirius)
 export(harmonize_spectra)
@@ -111,6 +113,8 @@ importFrom(crayon,white)
 importFrom(crayon,yellow)
 importFrom(docopt,docopt)
 importFrom(dplyr,join_by)
+importFrom(fs,dir_create)
+importFrom(fs,path_home)
 importFrom(glue,glue)
 importFrom(httr2,req_error)
 importFrom(httr2,req_method)
