--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ export(calculate_mass_of_m)
 export(clean_bio)
 export(clean_chemo)
 export(clean_collapse)
-export(cleanup_spectra)
 export(columns_model)
 export(complement_metadata_structures)
 export(create_components)
@@ -46,11 +45,9 @@ export(harmonize_names_sirius)
 export(harmonize_spectra)
 export(import_spectra)
 export(install)
-export(keep_peaks)
 export(load_yaml_files)
 export(log_debug)
 export(log_pipe)
-export(normalize_peaks)
 export(parse_adduct)
 export(parse_cli_params)
 export(parse_yaml_params)
@@ -72,7 +69,6 @@ export(prepare_libraries_spectra)
 export(prepare_params)
 export(prepare_taxa)
 export(read_from_sirius_zip)
-export(remove_above_precursor)
 export(replace_id)
 export(round_reals)
 export(run_app)
@@ -101,8 +97,11 @@ importFrom(Spectra,dropNaSpectraVariables)
 importFrom(Spectra,filterEmptySpectra)
 importFrom(Spectra,filterFourierTransformArtefacts)
 importFrom(Spectra,filterIntensity)
+importFrom(Spectra,filterMsLevel)
 importFrom(Spectra,filterPrecursorCharge)
+importFrom(Spectra,filterPrecursorPeaks)
 importFrom(Spectra,reduceSpectra)
+importFrom(Spectra,scalePeaks)
 importFrom(crayon,blue)
 importFrom(crayon,cyan)
 importFrom(crayon,green)
