Get rid of `pak`

--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -41,8 +41,7 @@ jobs:
             
       - name: Install package
         run: |
-          install.packages("pak")
-          pak::pak("taxonomicallyinformedannotation/tima")
+          install.packages("tima", repos = c("https://taxonomicallyinformedannotation.r-universe.dev", "https://cloud.r-project.org"))
           tima::install()
         shell: Rscript {0}
 
