--- a/NAMESPACE
+++ b/NAMESPACE
@@ -112,6 +112,7 @@ importFrom(crayon,white)
 importFrom(crayon,yellow)
 importFrom(docopt,docopt)
 importFrom(dplyr,join_by)
+importFrom(fs,dir_copy)
 importFrom(fs,dir_create)
 importFrom(fs,path_home)
 importFrom(glue,glue)
@@ -129,7 +130,6 @@ importFrom(jsonlite,stream_in)
 importFrom(lifecycle,deprecated)
 importFrom(msentropy,calculate_entropy_similarity)
 importFrom(msentropy,calculate_spectral_entropy)
-importFrom(pak,pkg_status)
 importFrom(pbapply,pblapply)
 importFrom(rotl,tax_lineage)
 importFrom(rotl,taxonomy_taxon_info)
@@ -200,6 +200,8 @@ importFrom(tidytable,where)
 importFrom(utils,URLencode)
 importFrom(utils,combn)
 importFrom(utils,globalVariables)
+importFrom(utils,install.packages)
+importFrom(utils,installed.packages)
 importFrom(utils,unzip)
 importFrom(yaml,read_yaml)
 importFrom(yaml,write_yaml)
