--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ Authors@R: c(
 Maintainer: Adriano Rutz <rutz@imsb.biol.ethz.ch>
 Description: This package provides the infrastructure to perform Taxonomically
     Informed Metabolite Annotation.
-License: file LICENSE.md
+License: GPL (>= 3)
 URL: https://github.com/taxonomicallyinformedannotation/tima,
     https://taxonomicallyinformedannotation.github.io/tima
 BugReports: https://github.com/taxonomicallyinformedannotation/tima/issues
@@ -56,6 +56,11 @@ Imports:
     utils,
     visNetwork (>= 2.1.2),
     yaml (>= 2.3.10)
+Remotes: 
+    bioc/MetaboCoreUtils,
+    bioc/MsBackendMgf,
+    bioc/MsBackendMsp,
+    bioc/Spectra
 Suggests: 
     BiocManager,
     knitr,
