--- a/.github/workflows/external-use.yaml
+++ b/.github/workflows/external-use.yaml
@@ -37,7 +37,7 @@ jobs:
           Ncpus: 2
       - name: Install
         run: |
-          install.packages("tima", repos = c("https://taxonomicallyinformedannotation.r-universe.dev", "https://bioc.r-universe.dev", "https://cloud.r-project.org"))
+          install.packages("tima", repos = c("https://taxonomicallyinformedannotation.r-universe.dev", "https://cloud.r-project.org"))
           tima::install()
         shell: Rscript {0}
       - name: Get example files
