--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -34,6 +34,13 @@ jobs:
           use-public-rspm: true
           Ncpus: ${{ steps.cpu-cores.outputs.count }}
 
+      - name: Install dependencies on Ubuntu
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update && sudo apt-get install -y --no-install-recommends libcurl4-openssl-dev libharfbuzz-dev libfribidi-dev \
+          && sudo apt-get clean \
+          && sudo rm -rf /var/lib/apt/lists/*
+
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           extra-packages:  |
