--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(clean_chemo)
 export(clean_collapse)
 export(columns_model)
 export(complement_metadata_structures)
+export(copy_backbone)
 export(create_components)
 export(create_dir)
 export(create_edges)
