--- a/.github/workflows/external-use.yaml
+++ b/.github/workflows/external-use.yaml
@@ -31,10 +31,13 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@v4
+      - name: Get number of CPU cores
+        uses: SimenB/github-actions-cpu-cores@v2
+        id: cpu-cores
       - uses: r-lib/actions/setup-r@v2
         with:
           use-public-rspm: true
-          Ncpus: 2
+          Ncpus: ${{ steps.cpu-cores.outputs.count }}
       - name: Install dependencies on Ubuntu
         if: matrix.os == 'ubuntu-latest'
         run: |
