--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,10 +13,12 @@ export(export_spectra)
 export(export_spectra_2)
 export(extract_spectra)
 export(filter_annotations)
+export(get_default_paths)
 export(get_example_files)
 export(get_file)
 export(get_last_version_from_zenodo)
 export(get_organism_taxonomy_ott)
+export(get_params)
 export(go_to_cache)
 export(import_spectra)
 export(install)
