--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,26 +2,58 @@
 
 export(annotate_masses)
 export(annotate_spectra)
+export(benchmark_taxize_spectra)
+export(calculate_entropy)
 export(calculate_mass_of_m)
+export(clean_bio)
+export(clean_chemo)
+export(clean_collapse)
+export(columns_model)
 export(complement_metadata_structures)
+export(copy_backbone)
 export(create_components)
 export(create_dir)
+export(create_edges)
 export(create_edges_spectra)
+export(decorate_bio)
+export(decorate_chemo)
+export(decorate_masses)
+export(dist_get)
+export(dist_groups)
 export(export_output)
+export(export_params)
 export(export_spectra)
 export(export_spectra_2)
 export(extract_spectra)
+export(fake_annotations_columns)
+export(fake_ecmdb)
+export(fake_hmdb)
+export(fake_lotus)
+export(fake_sop_columns)
 export(filter_annotations)
+export(filter_high_confidence_only)
 export(get_default_paths)
 export(get_example_files)
+export(get_example_sirius)
 export(get_file)
+export(get_gnps_tables)
 export(get_last_version_from_zenodo)
+export(get_massbank_spectra)
 export(get_organism_taxonomy_ott)
 export(get_params)
 export(go_to_cache)
+export(harmonize_adducts)
+export(harmonize_names_sirius)
+export(harmonize_spectra)
 export(import_spectra)
 export(install)
+export(load_yaml_files)
+export(log_debug)
+export(log_pipe)
 export(parse_adduct)
+export(parse_cli_params)
+export(parse_yaml_params)
+export(pre_harmonize_names_sirius)
 export(prepare_annotations_gnps)
 export(prepare_annotations_sirius)
 export(prepare_annotations_spectra)
@@ -37,12 +69,22 @@ export(prepare_libraries_sop_merged)
 export(prepare_libraries_spectra)
 export(prepare_params)
 export(prepare_taxa)
+export(read_from_sirius_zip)
+export(replace_id)
+export(round_reals)
 export(run_app)
 export(sanitize_spectra)
+export(select_annotations_columns)
+export(select_sirius_columns_canopus)
 export(select_sirius_columns_formulas)
 export(select_sirius_columns_structures)
+export(select_sop_columns)
+export(split_tables_sop)
 export(tima_full)
+export(transform_score_sirius_csi)
 export(weight_annotations)
+export(weight_bio)
+export(weight_chemo)
 import(rlang)
 importFrom(MetaboCoreUtils,calculateMass)
 importFrom(MsBackendMgf,readMgf)
