--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -104,8 +104,7 @@ Collate:
     'decorate_chemo.R'
     'export_output.R'
     'export_params.R'
-    'export_spectra.R'
-    'export_spectra_2.R'
+    'export_spectra_rds.R'
     'extract_spectra.R'
     'fake_annotations_columns.R'
     'fake_ecmdb.R'
