--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,8 +22,7 @@ export(dist_get)
 export(dist_groups)
 export(export_output)
 export(export_params)
-export(export_spectra)
-export(export_spectra_2)
+export(export_spectra_rds)
 export(extract_spectra)
 export(fake_annotations_columns)
 export(fake_ecmdb)
