--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -18,4 +18,4 @@ template:
   params:
     google_site_verification: Bt77rpBuC_R-0p62TWtA_ba5rvx-PuSEMv4LHg1UsOo
 
-url: https://taxonomicallyinformedannotation.github.io/tima-r
+url: https://taxonomicallyinformedannotation.github.io/tima
