--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,9 +21,7 @@ Imports:
     crayon (>= 1.5.3),
     docopt (>= 0.7.1),
     dplyr (>= 1.1.4),
-    DT,
     fs (>= 1.6.4),
-    gt,
     httr2 (>= 1.0.1),
     igraph (>= 2.0.3),
     jsonlite (>= 1.8.8),
@@ -32,11 +30,8 @@ Imports:
     MsBackendMsp (>= 1.6.0),
     msentropy (>= 0.1.4),
     pbapply (>= 1.7.2),
-    pingr,
     rotl (>= 3.1.0),
     shiny (>= 1.9.0),
-    shinybusy,
-    shinyWidgets,
     Spectra (>= 1.12.0),
     stats,
     stringi (>= 1.8.4),
@@ -45,7 +40,6 @@ Imports:
     tidyselect (>= 1.2.1),
     tidytable (>= 0.11.1),
     utils,
-    visNetwork,
     yaml (>= 2.3.10)
 Suggests: 
     BiocManager,
@@ -58,8 +52,10 @@ Suggests:
     shinyjs,
     shinytest2,
     shinyvalidate,
+    shinyWidgets,
     spelling,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    visNetwork
 VignetteBuilder:
     knitr
 biocViews: metabolite annotation, chemotaxonomy, scoring system, natural
