--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -56,6 +56,7 @@ Suggests:
     shinyhelper,
     shinyjs,
     shinytest2,
+    shinyvalidate,
     spelling,
     testthat (>= 3.0.0)
 VignetteBuilder:
