--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,19 +14,12 @@ env:
   REGISTRY_IMAGE: adafede/tima-r
 
 jobs:
-  build:
+  build-amd64:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        platform:
-          - linux/amd64
-          - linux/arm64
     steps:
       - name: Prepare
         run: |
-          platform=${{ matrix.platform }}
-          echo "PLATFORM_PAIR=${platform//\//-}" >> $GITHUB_ENV
+          echo "PLATFORM_PAIR=linux-amd64" >> $GITHUB_ENV
       
       - name: Docker meta
         id: meta
@@ -50,7 +43,7 @@ jobs:
         id: build
         uses: docker/build-push-action@v6
         with:
-          platforms: ${{ matrix.platform }}
+          platforms: linux/amd64
           labels: ${{ steps.meta.outputs.labels }}
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
       
@@ -63,7 +56,54 @@ jobs:
       - name: Upload digest
         uses: actions/upload-artifact@v4
         with:
-          name: digests-${{ env.PLATFORM_PAIR }}
+          name: digests-linux-amd64
+          path: /tmp/digests/*
+          if-no-files-found: error
+          retention-days: 1
+
+  build-arm64:
+    runs-on: macos-latest
+    steps:
+      - name: Prepare
+        run: |
+          echo "PLATFORM_PAIR=linux-arm64" >> $GITHUB_ENV
+      
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY_IMAGE }}
+      
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+      
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - name: Build and push by digest
+        id: build
+        uses: docker/build-push-action@v6
+        with:
+          platforms: linux/arm64
+          labels: ${{ steps.meta.outputs.labels }}
+          outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
+      
+      - name: Export digest
+        run: |
+          mkdir -p /tmp/digests
+          digest="${{ steps.build.outputs.digest }}"
+          touch "/tmp/digests/${digest#sha256:}"
+      
+      - name: Upload digest
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-linux-arm64
           path: /tmp/digests/*
           if-no-files-found: error
           retention-days: 1
@@ -71,7 +111,8 @@ jobs:
   merge:
     runs-on: ubuntu-latest
     needs:
-      - build
+      - build-amd64
+      - build-arm64
     steps:
       - name: Download digests
         uses: actions/download-artifact@v4
@@ -104,13 +145,3 @@ jobs:
       - name: Inspect image
         run: |
           docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
-  check:
-    runs-on: ubuntu-latest
-    needs:
-      - build
-    steps:
-      - name: Docker Compose Action
-        uses: isbang/compose-action@v2.0.1
-        with:
-          services: |
-            ${{ env.DOCKER_SERVICE }}
