--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,7 +15,7 @@ env:
 
 jobs:
   build-amd64:
-    runs-on: cirun-aws-t2-large-ubuntu2204
+    runs-on: ubuntu-latest
     steps:
       - name: Prepare
         run: |
@@ -62,7 +62,7 @@ jobs:
           retention-days: 1
 
   build-arm64:
-    runs-on: cirun-aws-t2-large-ubuntu2204
+    runs-on: warp-ubuntu-latest-arm64-2x
     steps:
       - name: Prepare
         run: |
@@ -109,7 +109,7 @@ jobs:
           retention-days: 1
 
   merge:
-    runs-on: cirun-aws-t2-large-ubuntu2204
+    runs-on: ubuntu-latest
     needs:
       - build-amd64
       - build-arm64
